tests/NormalTests/paczka1/small_fuzzy/55858003.err
Error in line 2: Gd7JlOzh S231 88,4
Error in line 4: Gd7JlOzh A779 70,9
